--- a/myWebSite.html
+++ b/myWebSite.html
@@ -115,7 +115,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-			<img class="Tabark Alsoud" src="https://github.com/tabarkhood/MyPortfolio-/blob/main/Cybersecurity.jpeg" width="250" height="320">
+			<img class="Tabark Alsoud" src="https://raw.githubusercontent.com/tabarkhood/MyPortfolio-/refs/heads/main/Cybersecurity.jpeg" width="250" height="320">
 
 
             <p>Welcome! I am passionate about cybersecurity and protecting digital assets.</p>
@@ -192,3 +192,4 @@
 </body>
 
 </html>
+
